syntax = "proto3";

package calculator.api.v1;

option java_multiple_files = true;
option java_package = "ru.itmo.calculator.generated.grpc";
option java_outer_classname = "CalculatorProto";

// InstructionExecutor exposes the same capability as the HTTP API but over gRPC.
service InstructionExecutor {
  rpc Execute(ExecuteProgramRequest) returns (ExecuteProgramResponse);
}

message ExecuteProgramRequest {
  repeated InstructionDto instructions = 1;
}

message InstructionDto {
  oneof instruction_kind {
    CalcInstructionDto calc = 1;
    PrintInstructionDto print = 2;
  }
}

message CalcInstructionDto {
  Operation op = 1;
  string var = 2;
  OperandDto left = 3;
  OperandDto right = 4;
}

message PrintInstructionDto {
  string var = 1;
}

enum Operation {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_ADD = 1;
  OPERATION_SUBTRACT = 2;
  OPERATION_MULTIPLY = 3;
}

message OperandDto {
  oneof value {
    int64 literal = 1;
    string variable = 2;
  }
}

message ExecuteProgramResponse {
  repeated PrintedValue items = 1;
}

message PrintedValue {
  string var = 1;
  int64 value = 2;
}
